Grid Particles only partially generated #41403

Closed
opened 2014-08-11 19:39:43 +02:00 by Sebastian Röthlisberger · 11 comments

System Information
osx 10.9.4, mbpr late 2013

Blender Version
Broken: c4814c8, official 2.71
Worked: (optional)

Short description of error
In this certain Mesh the generation of Particles in Grid option fills only 3/4 of the Object (bottom). (See Image)

Exact steps for others to reproduce the error
Open supplied .blend file.

Bug_ParticlesGrid.png

Bug_ParticlesGridsmall.blend

**System Information** osx 10.9.4, mbpr late 2013 **Blender Version** Broken: c4814c8, official 2.71 Worked: (optional) **Short description of error** In this certain Mesh the generation of Particles in Grid option fills only 3/4 of the Object (bottom). (See Image) **Exact steps for others to reproduce the error** Open supplied .blend file. ![Bug_ParticlesGrid.png](https://archive.blender.org/developer/F102471/Bug_ParticlesGrid.png) [Bug_ParticlesGridsmall.blend](https://archive.blender.org/developer/F102473/Bug_ParticlesGridsmall.blend)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @SebastianRothlisberger

Added subscriber: @SebastianRothlisberger

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Bastien Montagne self-assigned this 2014-08-11 19:54:13 +02:00

Thanks for the report, but there is no bug here, 'grid' distribution works on a square pattern…

Thanks for the report, but there is no bug here, 'grid' distribution works on a square pattern…

How comes?

Bug_ParticlesGrid2.png

So why does it work there but not in my File?

How comes? ![Bug_ParticlesGrid2.png](https://archive.blender.org/developer/F102478/Bug_ParticlesGrid2.png) So why does it work there but not in my File?

Would need the .blend file to check, but have the feeling those have a square bbox (in object space, not world one)?

Would need the .blend file to check, but have the feeling those have a square bbox (in object space, not world one)?

Changed status from 'Archived' to: 'Open'

Changed status from 'Archived' to: 'Open'

Humph… Testing a bit more, there seems to be something wrong going on here, in fact… will check.

Humph… Testing a bit more, there seems to be something wrong going on here, in fact… will check.

This issue was referenced by bd623d9da3

This issue was referenced by bd623d9da36157cc743c194e695f59593c10099e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit bd623d9da3.

Closed by commit bd623d9da3.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41403
No description provided.