Fix T41403: Grid Particles only partially generated.

Getting dominant axis (biggest dimension of bbox) was wrong, now using BLI code for that.